# blewifi_mgr

./: CMakeLists.txt  README.md
includes/: ble_advertise.h  gatt_server.h  network_util.h
libshared/: CMakeLists.txt  att.c  crypto.c  mainloop.c
scripts/: wifi_config.sh
src/: ble_advertise.c  blewifi_manager.c  gatt_server.c  network_util.c
